--- a/android/build.gradle
+++ b/android/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':capacitor-android')
     implementation "androidx.appcompat:appcompat:$androidxAppCompatVersion"
-    implementation files('/spotify-appremote/ar.aar')
+    implementation files('./spotify-appremote/ar.aar')
     implementation 'com.google.code.gson:gson:2.4'
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
